{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Commands",
            "id": "1583c8a9-41d5-4b2a-a6a6-1197471002e1",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e6356d90-ce12-44ca-95a4-96c47de8836c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowDown",
                    "type": "Button",
                    "id": "fdbe2410-3c6e-4718-8ec8-b32f3347f52d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "6367f38d-5f3a-41c5-a081-3fb9d2ab808b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stop",
                    "type": "Button",
                    "id": "4eba74fa-7252-4f92-b06d-80c78a50be5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn",
                    "type": "Button",
                    "id": "156419d4-413c-4260-a1cf-4bf77f42c934",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItems",
                    "type": "Button",
                    "id": "f181b196-62d9-4be8-b3de-0cf793ff00b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ea455882-b644-4dca-9da1-7a5649552c48",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "418c0c4c-4d4a-4cf9-8597-23604e413dc3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlowDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5af1e1f7-4908-45dd-8cb3-ee66c763da53",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8751c7b6-2204-4d16-8b90-72f466c08a4a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd94d505-7998-48d5-91bc-286af909b4a8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b574a980-2e14-45ba-b48e-5bf1eb36575e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}